# qwenirc

./: .clang-format  .gitignore  AGENT_PROMPT.md  AUDIT_CHECKLIST.md  CMakeLists.txt  QWEN_PROMPT.md  TODO.md  build.sh
backend/: IRCChannel.cpp  IRCChannel.h  IRCMessage.cpp  IRCMessage.h  IRCMessageModel.cpp  IRCMessageModel.h  IRCUser.cpp  IRCUser.h  NetworkManager.cpp  NetworkManager.h
frontend/: ChannelTab.cpp  ChannelTab.h  ChatWidget.cpp  ChatWidget.h  MainWindow.cpp  MainWindow.h  ServerDialog.cpp  ServerDialog.h
src/: main.cpp
tests/: CMakeLists.txt  test_irc_message.cpp  test_irc_parser.cpp  test_irc_user_model.cpp
